Fixing unintended merge

--- a/version.props
+++ b/version.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>2.2.0</VersionPrefix>
+    <VersionPrefix>2.1.0</VersionPrefix>
     <ExperimentalProjectVersionPrefix>0.4.0</ExperimentalProjectVersionPrefix>
-    <VersionSuffix>preview2</VersionSuffix>
+    <VersionSuffix>rc1</VersionSuffix>
     <PackageVersion Condition="'$(IsFinalBuild)' == 'true' AND '$(VersionSuffix)' == 'rtm' ">$(VersionPrefix)</PackageVersion>
     <PackageVersion Condition="'$(IsFinalBuild)' == 'true' AND '$(VersionSuffix)' != 'rtm' ">$(VersionPrefix)-$(VersionSuffix)-final</PackageVersion>
     <BuildNumber Condition="'$(BuildNumber)' == ''">t000</BuildNumber>
