--- a/version.props
+++ b/version.props
@@ -1,10 +1,10 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>2.2.0</VersionPrefix>
-    <VersionSuffix>preview1</VersionSuffix>
+    <VersionPrefix>2.1.0</VersionPrefix>
+    <VersionSuffix>rc1</VersionSuffix>
 
-    <ExperimentalVersionPrefix>0.2.0</ExperimentalVersionPrefix>
-    <ExperimentalVersionSuffix>alpha1</ExperimentalVersionSuffix>
+    <ExperimentalVersionPrefix>0.1.0</ExperimentalVersionPrefix>
+    <ExperimentalVersionSuffix>alpha2</ExperimentalVersionSuffix>
 
 
     <PackageVersion Condition=" '$(IsFinalBuild)' == 'true' AND '$(VersionSuffix)' == 'rtm' ">$(VersionPrefix)</PackageVersion>
@@ -23,8 +23,7 @@
     <ExperimentalPackageVersion Condition=" '$(IsFinalBuild)' == 'true' AND '$(ExperimentalVersionSuffix)' != 'rtm' ">$(ExperimentalVersionPrefix)-$(ExperimentalVersionSuffix)-final</ExperimentalPackageVersion>
     <ExperimentalVersionSuffix Condition=" '$(ExperimentalVersionSuffix)' != '' AND '$(BuildNumber)' != '' ">$(ExperimentalVersionSuffix)-$(BuildNumber)</ExperimentalVersionSuffix>
 
-    <!-- Even though we build from 'dev', this is set to 'master' to align with the dotnet-CLI channel name for their 'dev' branch. -->
-    <SharedFxCliBlobChannel>master</SharedFxCliBlobChannel>
+    <SharedFxCliBlobChannel>release/2.1</SharedFxCliBlobChannel>
   </PropertyGroup>
 
 </Project>
