--- a/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
+++ b/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\..\samples\DynamicSchemes\DynamicSchemes.csproj" />
     <ProjectReference Include="..\..\samples\Identity.ExternalClaims\Identity.ExternalClaims.csproj" />
     <ProjectReference Include="..\..\samples\PathSchemeSelection\PathSchemeSelection.csproj" />
+    <ProjectReference Include="..\..\samples\StaticFilesAuth\StaticFilesAuth.csproj" />
 
     <PackageReference Include="Microsoft.AspNetCore" Version="$(MicrosoftAspNetCorePackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="$(MicrosoftAspNetCoreHostingPackageVersion)" />
