Added nuspec file to Mvc.Analyzers assembly

--- a/src/Microsoft.AspNetCore.Mvc.Razor/Microsoft.AspNetCore.Mvc.Razor.csproj
+++ b/src/Microsoft.AspNetCore.Mvc.Razor/Microsoft.AspNetCore.Mvc.Razor.csproj
@@ -42,6 +42,7 @@
         tags=$([MSBuild]::Escape($(PackageTags)));
         serviceable=$(Serviceable);
         repositoryUrl=$(RepositoryUrl);
+        repositoryCommit=$(RepositoryCommit);
         targetframework=$(TargetFramework);
         MicrosoftAspNetCoreMvcRazorExtensionsPackageVersion=$(MicrosoftAspNetCoreMvcRazorExtensionsPackageVersion);
         MicrosoftAspNetCoreRazorRuntimePackageVersion=$(MicrosoftAspNetCoreRazorRuntimePackageVersion);
