--- a/src/AspNetCoreModuleV1/AspNetCore/aspnetcoremodule.rc
+++ b/src/AspNetCoreModuleV1/AspNetCore/aspnetcoremodule.rc
@@ -77,7 +77,7 @@ BEGIN
             VALUE "FileDescription", "IIS ASP.NET Core Module"
             VALUE "FileVersion", FileVersionStr
             VALUE "InternalName", "aspnetcore.dll"
-            VALUE "LegalCopyright", "Copyright (C) 2016"
+            VALUE "LegalCopyright", "Copyright (C) Microsoft Corporation"
             VALUE "OriginalFilename", "aspnetcore.dll"
             VALUE "ProductName", "ASP.NET Core Module"
             VALUE "ProductVersion", ProductVersionStr
