--- a/src/AspNetCoreModuleV2/AspNetCore/aspnetcoremodule.rc
+++ b/src/AspNetCoreModuleV2/AspNetCore/aspnetcoremodule.rc
@@ -76,7 +76,7 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "Microsoft Corporation"
+            VALUE "CompanyName", "Microsoft"
             VALUE "FileDescription", FileDescription
             VALUE "FileVersion", FileVersionStr
             VALUE "InternalName", "aspnetcore"
