--- a/src/Kestrel.Transport.Abstractions/Kestrel.Transport.Abstractions.csproj
+++ b/src/Kestrel.Transport.Abstractions/Kestrel.Transport.Abstractions.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Buffers.Sources" Version="$(MicrosoftExtensionsBuffersSourcesPackageVersion)" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Extensions.Buffers.MemoryPool.Sources" Version="$(MicrosoftExtensionsBuffersMemoryPoolSourcesPackageVersion)" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
