--- a/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
+++ b/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\samples\Cookies\Cookies.csproj" />
     <ProjectReference Include="..\..\samples\ClaimsTransformation\ClaimsTransformation.csproj" />
+    <ProjectReference Include="..\..\samples\CustomPolicyProvider\CustomPolicyProvider.csproj" />
     <ProjectReference Include="..\..\samples\DynamicSchemes\DynamicSchemes.csproj" />
     <ProjectReference Include="..\..\samples\Identity.ExternalClaims\Identity.ExternalClaims.csproj" />
     <ProjectReference Include="..\..\samples\PathSchemeSelection\PathSchemeSelection.csproj" />
