--- a/test/dotnet-user-secrets.Tests/dotnet-user-secrets.Tests.csproj
+++ b/test/dotnet-user-secrets.Tests/dotnet-user-secrets.Tests.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\src\dotnet-user-secrets\dotnet-user-secrets.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="$(MicrosoftExtensionsConfigurationUserSecretsPackageVersion)" />
+  </ItemGroup>
+
 </Project>
