--- a/test/IISIntegration.FunctionalTests/AppHostConfig/Http.config
+++ b/test/IISIntegration.FunctionalTests/AppHostConfig/Http.config
@@ -254,6 +254,8 @@
       <add name="ManagedEngineV4.0_32bit" image="%windir%\Microsoft.NET\Framework\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness32" />
       <add name="ManagedEngineV4.0_64bit" image="%windir%\Microsoft.NET\Framework64\v4.0.30319\webengine4.dll" preCondition="integratedMode,runtimeVersionv4.0,bitness64" />
       <add name="AspNetCoreModule" image="[ANCMPath]"/>
+      <add name="AspNetCoreModuleV2" image="[ANCMV2Path]"/>
+
     </globalModules>
 
     <httpCompression directory="%TEMP%\iisexpress\IIS Temporary Compressed Files">
@@ -930,6 +932,7 @@
         <add name="ScriptModule-4.0" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" preCondition="managedHandler,runtimeVersionv4.0" />
         <add name="ServiceModel" type="System.ServiceModel.Activation.HttpModule, System.ServiceModel, Version=3.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" preCondition="managedHandler,runtimeVersionv2.0" />
         <add name="AspNetCoreModule" />
+        <add name="AspNetCoreModuleV2" />
       </modules>
       <handlers accessPolicy="Read, Script">
         <!--                <add name="WebDAV" path="*" verb="PROPFIND,PROPPATCH,MKCOL,PUT,COPY,DELETE,MOVE,LOCK,UNLOCK" modules="WebDAVModule" resourceType="Unspecified" requireAccess="None" /> -->
