--- a/nuget/AspNetCoreV1.nuspec
+++ b/nuget/AspNetCoreV1.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
-    <id>Microsoft.AspNetCore.AspNetCoreModuleV1</id>
+    <id>Microsoft.AspNetCore.AspNetCoreModule</id>
     <title>Microsoft ASP.NET Core Module</title>
     <version>$VERSION$</version>
     <authors>Microsoft</authors>
